getlood-authelia-rebranding/gcp/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getlood-authelia-ingress
  namespace: auth-system
  labels:
    app: getlood-authelia
    component: authentication
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "getlood-authelia-ip"
    networking.gke.io/managed-certificates: "getlood-authelia-cert"
    kubernetes.io/ingress.allow-http: "false"
    cloud.google.com/backend-config: '{"default": "getlood-authelia-backend-config"}'
    cloud.google.com/armor-config: '{"getlood-authelia-policy"}'
spec:
  rules:
    - host: auth.getlood.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: getlood-authelia-svc
                port:
                  number: 9091
